fix fonts, name overflow, grid images

--- a/blocks/elements/__img/elements__img.css
+++ b/blocks/elements/__img/elements__img.css
@@ -1,9 +1,5 @@
 .elements__img {
     border-radius: 10px 10px 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    margin: auto;
+    height: 282px;
 }
