--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,6 @@
 .header__logo {
     margin-bottom: 37px;
+    display: inline-block;
 }
 
 @media screen and (max-width: 767px) {
