--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,10 +3,15 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 114%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 294px;
 }
 
 @media screen and (max-width: 767px) {
     .profile__name {
+        max-width: 282px;
         font-size: 27px;
         line-height: 33px;
     }
